# chess-project

./: .gitignore  CMakeLists.txt  README.md
qml/: ChessGame.qml
qt/: Game_board.ui.qml  Screen01.ui.qml
src/: App.qml  Board.h  CMakeLists.txt  GameAdapter.cpp  GameAdapter.h  GameLogic.cpp  GameLogic.h  GameState.h  GameWindow.cpp  GameWindow.h  Game_board.ui.qml  Move.h  StockfishAI.cpp  StockfishAI.h  UserSystem.h  main.cpp
